POC url reputation

--- a/plugins_rust/url_reputation/pyproject.toml
+++ b/plugins_rust/url_reputation/pyproject.toml
@@ -11,3 +11,6 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+dependencies = [
+    "ipython>=8.12.3",
+]
