Added placeholder files and project for url_reputation plugin.    - keep pattern and domain check    - introduce entropy check as a second check
Signed-off-by: cafalchio <mcafalchio@gmail.com>

--- a/plugins_rust/url_reputation/pyproject.toml
+++ b/plugins_rust/url_reputation/pyproject.toml
@@ -11,10 +11,6 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
-dependencies = [
-    "ipython>=8.12.3",
-]
-
 
 [tool.maturin]
-include = ["url_reputation.pyi"]
+include = ["url_reputation_rust.pyi"]
