--- a/plugins_rust/url_reputation/pyproject.toml
+++ b/plugins_rust/url_reputation/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.11,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "url_reputation"
+name = "url_reputation_rust"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -11,6 +11,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+dependencies = [
+    "ipython>=8.12.3",
+]
 
 
 [tool.maturin]
