--- a/plugins_rust/url_reputation/pyproject.toml
+++ b/plugins_rust/url_reputation/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.11,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "url_reputation"
+name = "url_reputation_rust"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
